feat: get groups API
